--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,8 @@ html {
 }
 
 body {
-	background: $darkerGray;
+	background: $darkerGray: #6699CC; // bluish gray
+;
   font: 18px/1.4 $helvetica;
   color: $white;
 }
