--- a/style.scss
+++ b/style.scss
@@ -21,7 +21,7 @@ body {
 	background: $darkerGray: #6699CC; // bluish gray
 ;
   font: 18px/1.4 $helvetica;
-  color: $white;
+  color: $white: F5F5F5;
 }
 
 .container {
