--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: $darkerGray: #6699CC; // bluish gray
+	background: $#6699CC; // bluish gray
 ;
   font: 18px/1.4 $helvetica;
   color: $white;
