--- a/style.scss
+++ b/style.scss
@@ -62,7 +62,7 @@ h3 {
 
 h4 {
   font-size: 18px;
-  color: $gray;
+  color: #f5f5f5;
 }
 
 p {
@@ -123,7 +123,7 @@ img {
 
 // Specify the color of the selection
 ::-moz-selection {
-  color: $black;
+  color: #f5f5f5;
   background: $lightGray;
 }
 ::selection {
