--- a/style.scss
+++ b/style.scss
@@ -123,7 +123,7 @@ img {
 
 // Specify the color of the selection
 ::-moz-selection {
-  color: #f5f5f5;
+  color: black;
   background: $lightGray;
 }
 ::selection {
