--- a/style.scss
+++ b/style.scss
@@ -157,7 +157,7 @@ img {
 
 .masthead {
   padding: 20px 0;
-  border-bottom: 1px solid $black;
+  border-bottom: 1px solid $f5f5f5;
 
   @include mobile {
     text-align: center;
@@ -255,9 +255,9 @@ nav {
 .post {
   blockquote {
     margin: 1.8em .8em;
-    border-left: 2px solid $gray;
+    border-left: 2px solid $black; //recent changes
     padding: 0.1em 1em;
-    color: $gray;
+    color: $black;
     font-size: 22px;
     font-style: italic;
   }
