--- a/style.scss
+++ b/style.scss
@@ -157,7 +157,7 @@ img {
 
 .masthead {
   padding: 20px 0;
-  border-bottom: 1px solid $f5f5f5;
+  border-bottom: 1px solid #f5f5f5;
 
   @include mobile {
     text-align: center;
